<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/main_menu_rl_falt_entire_rent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/main_menu_iv_flat_entire_rent"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/rent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_iv_flat_entire_rent"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_flat_entire_rent"
            android:textColor="@drawable/selector_main_menu" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_menu_rl_ziruyu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/main_menu_iv_ziruyu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/ziruyu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_iv_ziruyu"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_ziruyu"
            android:textColor="@drawable/selector_main_menu" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_menu_rl_minsu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/main_menu_iv_minsu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/minsu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_iv_minsu"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_minsu"
            android:textColor="@drawable/selector_main_menu" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_menu_rl_life"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/main_menu_iv_life"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/life" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_iv_life"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_life"
            android:textColor="@drawable/selector_main_menu" />

    </RelativeLayout>
</LinearLayout>