<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemViewModel"
            type="com.badmask_zly.zirumockdemo.viewmodel.ItemContentMinSuFiveVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_minsu_hxzl1"
            android:textColor="@color/main_black"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/fragment_minsu_hxzl2"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_minsu_zry3"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView1" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="12dp"
            android:layout_height="11dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:beans="@{itemViewModel.recyclerviewData}"
            app:itemVMFactory="@{itemViewModel.itemVMFactory}"
            app:layoutManager="@{itemViewModel.layoutManager}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />


    </android.support.constraint.ConstraintLayout>

</layout>
