<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- name 是固定的，type 为 viewModel 的全路径 -->
        <variable
            name="itemViewModel"
            type="com.badmask_zly.zirumockdemo.viewmodel.ItemContentRentSevenVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- 业主部分 -->
        <TextView
            android:id="@+id/fragment_rent_tv_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@{itemViewModel.item().title}"
            android:textColor="@color/main_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_rent_recycler"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_rent_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:divider="@null"
            android:nestedScrollingEnabled="false"
            app:beans="@{itemViewModel.recyclerviewData}"
            app:itemDecoration="@{itemViewModel.MItemDecoration}"
            app:itemVMFactory="@{itemViewModel.itemVMFactory}"
            app:layoutManager="@{itemViewModel.layoutManager}"
            app:layout_constraintBottom_toTopOf="@+id/fragment_rent_ll_contact_bottom"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_rent_tv_story">

        </android.support.v7.widget.RecyclerView>

        <!-- 电话咨询／在线委托 底部区域 -->
        <LinearLayout
            android:id="@+id/fragment_rent_ll_contact_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/fragment_rent_iv_bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_rent_recycler">

            <TextView
                android:id="@+id/fragment_rent_tv_contact_bottom_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_fragment_rent_contact_button_bottom_contact"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/fragment_rent_contact_phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_rent_tv_contact_bottom_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_fragment_rent_contact_button_bottom_contact"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/fragment_rent_contact_online"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- 最后一张图 -->
        <ImageView
            android:id="@+id/fragment_rent_iv_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_rent_iv_bottom"
            android:src="@mipmap/homelogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_rent_ll_contact_bottom"
            app:layout_constraintVertical_bias="0.5"
            app:resizeHeight="@{itemViewModel.mBottomImgHeight}"
            app:resizeWidth="@{itemViewModel.mBottomImgWidth}" />



    </android.support.constraint.ConstraintLayout>

</layout>